--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,8 @@
 version: '3'
 services:
-  frontend:
+  web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000"
-    volumes:
-      - /app/node_modules # dont make reference to local root
-      - .:/app # map all files and folders from local root to container /app
-  frontend-test:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - .:/app
-    command: ["npm", "run", "test"]
+      - '80:80'
